external-crates/move/crates/move-compiler/tests/move_check/parser/top_level_module_address_invalid.move
address a {
    module m;
    public fun foo() { }
}
